--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -10,7 +10,7 @@ html {
 
 .headerWrapper {
   max-width: 1280px;
-  padding: 1em 2em;
+  padding: 1em 1em;
   margin: 0 auto;
   display: flex
 }
@@ -45,9 +45,11 @@ h2 {
 }
 
 h3 {
-  font-size: 2.5em;
-  font-weight: 700;
+  font-family: 'Montserrat';
+  font-size: 3em;
+  font-weight: 900;
   color: #151945;
+  letter-spacing: -0.05em;
 }
 
 p {
