--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -98,6 +98,7 @@ li {
   font-size: 1.25em;
   font-weight: 700;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 
 .secondaryButton {
@@ -109,6 +110,7 @@ li {
   font-size: 1.25em;
   font-weight: 700;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 
 .footerWrapper {
