--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -12,7 +12,7 @@ html {
   max-width: 1280px;
   padding: 1em 1em;
   margin: 0 auto;
-  display: flex
+  display: flex;
 }
 
 .container {
@@ -86,7 +86,7 @@ li {
 
 .buttonWrapper {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .primaryButton {
@@ -95,8 +95,10 @@ li {
   color: #ffffff;
   padding: 0.5em 1em;
   border-radius: 50px;
+  font-family: 'Karla';
   font-size: 1.25em;
   font-weight: 700;
+  letter-spacing: -0.05em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
@@ -107,8 +109,10 @@ li {
   background-color: #ffffff;
   padding: 0.5em 1em;
   border-radius: 50px;
+  font-family: 'Karla';
   font-size: 1.25em;
   font-weight: 700;
+  letter-spacing: -0.05em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
