--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -85,6 +85,7 @@ li {
 }
 
 .buttonWrapper {
+  margin: 0.5em 0;
   display: flex;
   justify-content: space-around;
 }
@@ -93,12 +94,11 @@ li {
   border: 5px solid #151945;
   background-color: #151945;
   color: #ffffff;
-  padding: 0.5em 1em;
+  padding: 0.75em 1.25em;
   border-radius: 50px;
   font-family: 'Karla';
-  font-size: 1.25em;
+  font-size: 1em;
   font-weight: 700;
-  letter-spacing: -0.05em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
@@ -107,12 +107,11 @@ li {
   border: 5px solid #151945;
   color: #151945;
   background-color: #ffffff;
-  padding: 0.5em 1em;
+  padding: 0.75em 1.25em;
   border-radius: 50px;
   font-family: 'Karla';
-  font-size: 1.25em;
+  font-size: 1em;
   font-weight: 700;
-  letter-spacing: -0.05em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
